app.js : post data sends full country name for alternate search large.css : reduce max width for image against overlap queryHub : use fullcountry parameter - splitted  res sends  prevents second fetch result not arriving in time

--- a/src/client/styles/large.scss
+++ b/src/client/styles/large.scss
@@ -246,7 +246,7 @@ h4 {
   border: none;
   background-color: transparent;
   max-height:200px;
-  max-width:300px;
+  max-width:280px;
   padding: 4px;
   margin: 1px 2px 16px 2px;
 }
